--- a/Workshop4/Workshop4.csproj
+++ b/Workshop4/Workshop4.csproj
@@ -66,6 +66,8 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <None Include="Properties\DataSources\Travel_Experts.Package.datasource" />
+    <None Include="Properties\DataSources\Travel_Experts.PackageDB.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +80,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Travel_Experts\Travel_Experts.csproj">
+      <Project>{9ad9d050-43d8-4a58-8b84-d0dde41a6ecd}</Project>
+      <Name>Travel_Experts</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
