--- a/Travel_Experts/Travel_Experts.csproj
+++ b/Travel_Experts/Travel_Experts.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Package.cs" />
+    <Compile Include="PackageDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelExpertsDB.cs" />
   </ItemGroup>
