--- a/Travel_Experts/Travel_Experts.csproj
+++ b/Travel_Experts/Travel_Experts.csproj
@@ -43,6 +43,8 @@
   <ItemGroup>
     <Compile Include="Package.cs" />
     <Compile Include="PackageDB.cs" />
+    <Compile Include="Product.cs" />
+    <Compile Include="ProductDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TravelExpertsDB.cs" />
   </ItemGroup>
