--- a/Workshop4/Workshop4.csproj
+++ b/Workshop4/Workshop4.csproj
@@ -68,6 +68,7 @@
     </Compile>
     <None Include="Properties\DataSources\Travel_Experts.Package.datasource" />
     <None Include="Properties\DataSources\Travel_Experts.PackageDB.datasource" />
+    <None Include="Properties\DataSources\Travel_Experts.Product.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
