--- a/Travel_Experts/Travel_Experts.csproj
+++ b/Travel_Experts/Travel_Experts.csproj
@@ -42,7 +42,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Package.cs" />
+    <Compile Include="Packages_products_suppliers.cs" />
+    <Compile Include="Packages_products_suppliersDB.cs" />
+    <Compile Include="Products.cs" />
+    <Compile Include="ProductsDB.cs" />
+    <Compile Include="Products_suppliers.cs" />
+    <Compile Include="Products_suppliersDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Suppliers.cs" />
+    <Compile Include="SuppliersDB.cs" />
+    <Compile Include="TravelExpertsDB.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
